PRJ_VER=0.8.99
SUMMARY=Major revised cmake-fedora
BODHI_UPDATE_TYPE=bugfix
REDHAT_BUGZILLA=
[Changes]
- Release version are now defined in cmake-fedora.conf
  for easy maintenance.
- CVS support is removed.
- New command: koji-build-scratch for scratch build on all supported
  releases.
- New module: ManageTarget
- New function: SETTING_STRING_GET_VARIABLE
- New macro: ADD_CUSTOM_TARGET_COMMAND
- Target changed: changelog_update are now separate as:
  + changelog_prev_update: Update ChangeLog.prev
  + rpm_changelog_prev_update: Update RPM-ChangeLog.prev
- Function renamed: LOAD_RELEASE_FILE to RELEASE_NOTES_READ_FILE
- RELEASE_ON_FEDORA: support new tags: "fedora" for current fedora,
  and "epel" for current epel.
- ChangeLog generation rewritten, target version_check no longer need.
- Removed target: version_check
- Variable Removed:
  FEDORA_NEXT_RELEASE
  FEDORA_NEXT_RELEASE_TAGS
  FEDORA_LATEST_RELEASE
  FEDORA_PREVIOUS_RELEASE
